Issue #2680767 by kyletaylored, aleanna, andrey.troeglazov: Views Responsive Grid - input elements overlap

--- a/css/style.css
+++ b/css/style.css
@@ -3053,6 +3053,17 @@ body.adminimal-skin-alternative.adminimal-theme.page-admin-structure-features #e
   padding-left: 0;
 }
 
+/* Fix Views Responsive Grid module see #2680767 */
+body.page-admin-structure-views-view #views-ui-edit-display-form #edit-options input.form-text {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -ms-box-sizing: border-box;
+  -o-box-sizing: border-box;
+  box-sizing: border-box;
+  max-width: 100%;
+  -webkit-padding-end: 8px;
+}
+
 .page-admin-structure-features-create form div.buttons {
   text-align: left;
 }
